Youtube social icon added

--- a/src/components/social/social.astro
+++ b/src/components/social/social.astro
@@ -14,6 +14,7 @@ const icons: Record<string, string> = {
     facebook: "fa6-brands:square-facebook",
     instagram: "fa6-brands:square-instagram",
     linkedin: "fa6-brands:linkedin",
+    youtube: "fa6-brands:square-youtube",
     whatsapp: "fa6-brands:square-whatsapp",
     telephone: "fa6-solid:square-phone",
     email: "fa6-solid:square-envelope",
