--- a/src/components/social/social.astro
+++ b/src/components/social/social.astro
@@ -169,4 +169,8 @@ const socials: Record<string, string>[] = preferences.general.social.map(
         margin-left: calc(50% - 9.5em);
         margin-right: calc(50% - 9.5em);
     }
+    
+    nav#navigation.mobile-nav .social {
+        justify-content: center;
+    }
 </style>
