--- a/src/layouts/Section.astro
+++ b/src/layouts/Section.astro
@@ -146,6 +146,7 @@ const expando = classList.includes("expando") ? true : false;
         pointer-events: none;
         position: absolute;
         inset: 0;
+        z-index: -1;
     }
 
     .background.fixed {
