--- a/src/shared/astro/SiteNavigation.astro
+++ b/src/shared/astro/SiteNavigation.astro
@@ -386,6 +386,7 @@ const secondaryNavbar = (prefs?.header?.secondary_navbar ?? true) && secondary.l
                 target.classList.remove("dropdown-open");
                 target.setAttribute("aria-expanded", "false");
                 dropdown.classList.remove("open");
+                dropdown.setAttribute("style", "");
             };
 
             target.setAttribute("aria-expanded", "true");
@@ -569,12 +570,13 @@ const secondaryNavbar = (prefs?.header?.secondary_navbar ?? true) && secondary.l
     nav {
         z-index: 999;
         overflow: hidden;
+        
+        grid-template-areas: "logo navigation";
     }
 
-    /* #navigation-items {
+    #navigation-items {
         height: 100%;
-        grid-area: secondary / navigation;
-    } */
+    }
 
     #mobile-nav-buttons {
         display: none;
@@ -635,7 +637,7 @@ const secondaryNavbar = (prefs?.header?.secondary_navbar ?? true) && secondary.l
     }
 
     /* @media only screen and (max-width: 768px) { */
-    nav#navigation.mobile-nav {
+    :where(#navigation.mobile-nav) {
         #mobile-nav-buttons {
             display: grid;
         }
@@ -738,16 +740,10 @@ const secondaryNavbar = (prefs?.header?.secondary_navbar ?? true) && secondary.l
     
     html:not(.mobile-nav) #navigation {
         ul.depth-0 {
-            /* grid-area: navigation; */
-            /* display: flex;
-            flex-direction: row; */
-            /* justify-content: flex-end; */
             height: 100%;
-
             gap: 0.5vw;
 
             display: grid;
-            
             grid-template-columns: 1fr;
             grid-auto-columns: auto;
             grid-auto-flow: column;
@@ -760,6 +756,7 @@ const secondaryNavbar = (prefs?.header?.secondary_navbar ?? true) && secondary.l
         &.secondary-navbar {
             ul.depth-0 {
                 grid-template-rows: 3.6rem 1fr;
+                grid-template-columns: auto;
             }
             
             li.depth-0 {
@@ -769,11 +766,14 @@ const secondaryNavbar = (prefs?.header?.secondary_navbar ?? true) && secondary.l
         }
         
 
-        li.depth-0 > a {
+        li.depth-0 { 
+            margin-bottom: 0;
+            
+            & > a {
             height: 100%;
             /* padding: 20px; */
             color: rgb(var(--header-color));
-        }
+        }}
 
         .depth-0 ul {
             position: fixed;
@@ -840,41 +840,6 @@ const secondaryNavbar = (prefs?.header?.secondary_navbar ?? true) && secondary.l
     .dropdown-caret {
         display: none;
     }
-
-
-    
-    /* .secondary {
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        grid-area: secondary;
-        margin: 0;
-        list-style: none;
-        padding-right: 2rem;
-        gap: 1rem;
-        height: 100%;
-        width: 100%;
-
-        li {
-            margin: 0;
-        }
-    } */
-    
-    /* nav:has(.secondary) {
-        display: grid;
-        grid-template-rows: subgrid;
-        grid-template-areas: "secondary" "navigation";
-        grid-template-columns: 1fr;
-
-        #navigation-items {
-            grid-area: navigation;
-        }
-        
-    } */
-    
-    /* #secondary-button {
-        
-    } */
 </style>
 
 <style lang="scss" is:global>
@@ -949,18 +914,23 @@ const secondaryNavbar = (prefs?.header?.secondary_navbar ?? true) && secondary.l
             border: 4px solid #0000;
             transition: background-color 0.1s ease-out;
             border-radius: var(--border-radius);
+            
+            line-height: 1.1;
     
             display: flex;
             align-items: center;
             flex-direction: row;
             justify-content: space-between;
             gap: 1rem;
-            text-align: center;
+        }
+        
+        li.depth-0 > a > span {
+            justify-content: center;
         }
     }
 
     li.depth-0 > a span {
-        padding: calc(var(--indent) * 0.1) calc(var(--indent) * 0.2);
+        padding: calc(var(--indent) * 0.02) calc(var(--indent) * 0.2);
     }
     
     html:not(.mobile-nav) nav#navigation.secondary-navbar > #navigation-items > ul.depth-0 #secondary-button {
@@ -981,9 +951,18 @@ const secondaryNavbar = (prefs?.header?.secondary_navbar ?? true) && secondary.l
             visibility: visible;
             background-color: transparent;
             --header-color: 255 255 255;
-            top: 0 !important;
-            width: 100%;
+            /* top: 0 !important; */
+            /* width: 100%; */
+            /* left: 0; */
+            right: calc(var(--indent) * 0.2);
+            
+            position: absolute;
+            
             justify-content: flex-end;
+            align-items: center;
+            border: none;
+            box-shadow: none;
+            flex-wrap: nowrap;
             
             pointer-events: all;
             
