--- a/src/layouts/Section.astro
+++ b/src/layouts/Section.astro
@@ -115,7 +115,7 @@ const expando = classList.includes("expando") ? true : false;
         position: relative;
         /* height: max(var(--height), fit-content); */
 
-        min-height: var(--height);
+        min-height: calc(var(--height) - var(--header-offset-transparent));
 
         --indent: var(--root-indent);
         padding: calc(var(--indent) * var(--vertical-indent)) var(--indent);
