fix(navigation): Fix overflow detection, ignore dropdown open for secondary navbar

--- a/src/components/social/social.astro
+++ b/src/components/social/social.astro
@@ -60,7 +60,7 @@ const socials: Record<string, string>[] = socialItems.map(
         color: var(--text-color);
         display: flex;
         justify-content: flex-end;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
         row-gap: 0.5rem;
 
         height: min-content;
