--- a/src/shared/astro/Header.astro
+++ b/src/shared/astro/Header.astro
@@ -96,8 +96,11 @@ const { id, currentPath } = Astro.props;
     }
 
     header.pinned.contain {
-        left: max(calc((100vw - var(--page-max-width)) * 0.5), 0vw);
-        right: max(calc((100vw - var(--page-max-width)) * 0.5), 0vw);
+        /* left: calc((100vw - var(--page-max-width)) * 0.5); */
+        top: 0;
+        left: unset;
+        right: unset;
+        width: min(var(--page-max-width), 100vw);
     }
 
     .logo {
