--- a/src/components/image/asideImage.astro
+++ b/src/components/image/asideImage.astro
@@ -28,18 +28,26 @@ const { width = 256, height = 256, class: classes, title } = Astro.props;
         margin: 3rem 0;
     }
 
-    figure.align-left {
-        margin: 0 2rem 2rem 0;
+    figure:where(.align-left) {
+        margin: .5em 4rem 4rem 0;
         float: left;
     }
-    figure.align-right {
-        margin: 0 0 2rem 2rem;
+    figure:where(.align-right) {
+        margin: .5em 0 4rem 4rem;
         float: right;
     }
-    figure.align-center {
+    figure:where(.align-center) {
         position: relative;
         float: none;
         margin: 3rem 0;
+    }
+    
+    @media only screen and (max-width: 768px) {
+        figure:where(.align-left,.align-right,.align-center) {
+            float: none;
+            margin: 2rem 4rem 2rem 4rem;
+        }
+        
     }
 </style>
 
