--- a/src/components/layout/slider/slider.astro
+++ b/src/components/layout/slider/slider.astro
@@ -452,6 +452,6 @@ const dataGlideOptions = Object.entries(glideOptions).reduce(
     }
     
     #slider-0 .slider-item > section > .component-wrapper {
-        padding-top: var(--header-height);
+        padding-top: calc(var(--header-height) - var(--header-offset-transparent));
     }
 </style>
