--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -172,7 +172,7 @@ main:has(:is(.image, .slider):first-child) {
   padding-top: var(--header-offset-transparent);
 
   > :first-child .glide__arrows {
-    top: var(--header-offset-transparent);
+    top: calc(var(--header-height) - var(--header-offset-transparent));
   }
 }
 
