--- a/src/components/accordion/accordion.astro
+++ b/src/components/accordion/accordion.astro
@@ -8,6 +8,41 @@ export interface Props {
 const {title} = Astro.props;
 ---
 
+<script>
+  // document.addEventListener("DOMContentLoaded", setupAccordion);
+  // document.addEventListener("astro:after-swap", setupAccordion);
+  setupAccordion();
+  
+  function setupAccordion() {
+    const accordions = document.querySelectorAll<HTMLElement>(".accordion");
+    
+    if (!accordions) return;
+    
+    accordions.forEach((accordion) => {
+      accordion.addEventListener("click", toggleAccordion);
+    });
+    
+  }
+  
+  function toggleAccordion(e: Event) {
+    if (!e.currentTarget) return;
+    
+    // Ignore clicks within accordion content
+    const target = (e.target as Element);
+    if (target.closest(".accordion-heading, .accordion")?.matches(".accordion")) return;
+    
+    const acccordion = (e.currentTarget as Element);
+    const state = acccordion.classList.contains("expanded");
+    
+    if (!state) acccordion.closest("section")?.querySelectorAll(".accordion").forEach((sibling) => {
+      if (sibling !== acccordion)
+      sibling.classList.remove("expanded");
+    });
+    
+    acccordion.classList.toggle("expanded");
+  }
+</script>
+
 <div class="accordion">
     <div class="accordion-heading" tabindex="0">
         <div class="accordion-icon">
@@ -89,37 +124,3 @@ const {title} = Astro.props;
         }
     }
 </style>
-
-<script>
-  document.addEventListener("DOMContentLoaded", setupAccordion);
-  document.addEventListener("astro:after-swap", setupAccordion);
-  
-  function setupAccordion() {
-    const accordions = document.querySelectorAll<HTMLElement>(".accordion");
-    
-    if (!accordions) return;
-    
-    accordions.forEach((accordion) => {
-      accordion.addEventListener("click", toggleAccordion);
-    });
-    
-  }
-  
-  function toggleAccordion(e: Event) {
-    if (!e.currentTarget) return;
-    
-    // Ignore clicks within accordion content
-    const target = (e.target as Element);
-    if (target.closest(".accordion-heading, .accordion")?.matches(".accordion")) return;
-    
-    const acccordion = (e.currentTarget as Element);
-    const state = acccordion.classList.contains("expanded");
-    
-    if (!state) acccordion.closest("section")?.querySelectorAll(".accordion").forEach((sibling) => {
-      if (sibling !== acccordion)
-      sibling.classList.remove("expanded");
-    });
-    
-    acccordion.classList.toggle("expanded");
-  }
-</script>
