Decrease background image quality

--- a/src/layouts/Section.astro
+++ b/src/layouts/Section.astro
@@ -84,6 +84,7 @@ const expando = classList.includes("expando") ? true : false;
                     opacity={background_opacity}
                     fixed={background_fixed}
                     background={true}
+                    quality="mid"
                 />
             </div>
         )
