--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -36,7 +36,7 @@
   --header-background-color-bottom: 0 0 0 / 0.3;
   --header-color: 255 255 255;
   --header-height: 100px;
-  --header-offset-transparent: 0;
+  --header-offset-transparent: 0px;
 
   --mobile-header-background-color: var(--header-background-color);
   --mobile-header-background-color-bottom: var(
