--- a/src/components/card-index/card-index.astro
+++ b/src/components/card-index/card-index.astro
@@ -9,6 +9,8 @@ import type { CollectionEntry } from "astro:content";
 import type { CollectionKey } from "astro:content";
 // import type { CollectionKey } from "astro:content";
 // import { type TreeNode } from "@mws-astro/middleware";
+import Lightbox from "@components/lightbox/lightbox.astro";
+import Page from "@shared/Page.astro";
 
 interface Props {
     target: string;
@@ -31,6 +33,7 @@ const {
     pageSize = 0,
     limit = 0,
     aspect = 1,
+    key,
 } = Astro.props;
 
 const filterMode = "ignore include"; //ignore include exclude
@@ -56,7 +59,7 @@ if (!ENV_BOOKSHOP_LIVE) {
             [],
         );
     
-    cards?.[0].data.publishDate?.getTime();
+    // cards?.[0].data.publishDate?.getTime();
 
     // Sort from newest to oldest, fall back on ascending order
     cards?.sort(
@@ -117,6 +120,8 @@ if (!ENV_BOOKSHOP_LIVE) {
     });
 }
 
+const id = `card-index-${key}`;
+
 // const cards = Object.values(cursor?.children).map((node) => {
 //   return node?.slug !== undefined && node.slug in data ? data[node.slug]
 // });
@@ -175,11 +180,18 @@ if (!ENV_BOOKSHOP_LIVE) {
         <div class="card-items" style={{ "--columns": columns }}>
             {
                 cards &&
-                    cards.map((card) => {
-                        return <Card {include} {card} {filters} {aspect} />;
+                    cards.map((card, i) => {
+                        return <Card {include} {card} {filters} {aspect} data-lightbox={`${id}-${i}`} />;
                     })
             }
         </div>
+        {include.includes("render") && cards && 
+            <Lightbox collection={id}>
+                {cards.map((card, i) => {
+                  return <Page contentBlocks={card.data["content_blocks"]} data-lightbox={`${id}-${i}`} />;
+                })}
+            </Lightbox>
+        }
     </div>
 </Section>
 
