--- a/src/components/card-index/card.astro
+++ b/src/components/card-index/card.astro
@@ -128,6 +128,10 @@ function formatDate(date: Date) {
             opacity 0.4s ease,
             transform 0.4s ease;
 
+        &[data-lightbox] {
+            cursor: pointer;
+        }
+
         &.filter-hide {
             display: none;
             // transform: scale(0.9);
